# ALLEGRO-SC

./: README.md
.github/workflows/: scrape.yml
dashboard/: README.md  app.js  index.html  styles.css
scraper/: .env.example  .gitignore  README.md  pyproject.toml  run_local.bat  run_local.sh
scraper/src/allegro_sc/: __init__.py  browser.py  client.py  config.py  export.py  models.py  run.py
scraper/src/allegro_sc/parsers/: __init__.py  extract.py  urls.py
scraper/tests/: test_csv.py  test_extract.py  test_urls.py
scraper/tests/fixtures/: listing_sample.html
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/migrations/: 0001_init.sql
worker/src/: auth.ts  http.ts  index.ts  types.ts
worker/src/routes/: diff.ts  ingest.ts  offers.ts  targets.ts
