[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allegro-sc-scraper"
version = "0.1.0"
description = "Playwright scraper for ALLEGRO-SC, runs on GitHub Actions"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "playwright-stealth>=1.0.6",
    "httpx>=0.27",
    "pydantic>=2.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
allegro-sc-scrape = "allegro_sc.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
